samples/_failures_safe/1761619100_c39f7d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6cef54b5.c: In function ‘main’:
./samples/SAFE/__tmp_6cef54b5.c:167:5: error: expected declaration or statement at end of input
  167 |     }
      |     ^
